# alas-launcher

./: .gitignore  CLAUDE.md  Cargo.toml  Info.plist  README.md  README_en.md  build.rs  deploy.mac-cn.yaml  deploy.mac.yaml  deploy.unix-cn.yaml  deploy.unix.yaml  deploy.windows-cn.yaml  deploy.windows.yaml  install.iss  requirements.txt  tauri.conf.json
.github/workflows/: package.yml
examples/: proc.rs
icons/: icon.icns
locales/: en.yml  ja.yml  zh-CN.yml  zh-TW.yml
src/: autostart.rs  backend.rs  i18n.rs  launcher_control.rs  main.rs  notify.rs  setup.rs  updater.rs
