[package]
name = "alas-launcher"
version = "2.0.5"
description = "AzurPilot launcher built with Tauri"
authors = ["Jianfeng Zhang <swordfeng123@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview-data-url", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
command-group = "5.0.1"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "=2.0.0"
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
ctrlc = "3.5.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
rust-i18n = "3"
sys-locale = "0.3"

[package.metadata.alas-launcher.time-bomb]
enabled = false
expires-at = "2026-05-28T05:00:00+08:00"
network-time-url = "https://www.aliyun.com"
message = "测试已结束，请安装正式版"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "winuser"] }
tauri-winrt-notification = "0.7.2"
windows-registry = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-probe = "0.1.6"
notify-rust = "4.16.1"

[profile.release]
strip = true
lto = true
